--- a/composer.json
+++ b/composer.json
@@ -5,11 +5,10 @@
   "keywords": ["rpc"],
   "homepage": "http://grpc.io",
   "license": "BSD-3-Clause",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "require": {
     "php": ">=5.5.0",
-    "ext-grpc": "*",
-    "google/protobuf": "v3.1.0-alpha-1"
+    "google/protobuf": "^v3.1.0"
   },
   "require-dev": {
     "google/auth": "v0.9"
