--- a/composer.json
+++ b/composer.json
@@ -3,9 +3,9 @@
   "type": "library",
   "description": "gRPC library for PHP",
   "keywords": ["rpc"],
-  "homepage": "http://grpc.io",
-  "license": "BSD-3-Clause",
-  "version": "1.4.7",
+  "homepage": "https://grpc.io",
+  "license": "Apache-2.0",
+  "version": "1.6.0",
   "require": {
     "php": ">=5.5.0"
   },
