--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,8 @@
   "license": "Apache-2.0",
   "version": "1.57.0",
   "require": {
-    "php": ">=7.0.0"
+    "php": ">=7.1.0",
+    "ext-grpc": "*"
   },
   "suggest": {
     "ext-protobuf": "For better performance, install the protobuf C extension.",
